--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -75,15 +75,16 @@
     scroll-behavior: smooth;
   }
 }
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
-  color: #f9fafb;
+  color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: #020202;
+  background-color: #41464b;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
