perubahan warna tampilan ngubah di bagian css saja

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,7 +84,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: #f9fafb;
   text-align: var(--bs-body-text-align);
-  background-color: #41464b; 
+  background-color: #515a62; 
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -1966,7 +1966,7 @@ progress {
   --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: #f9fafb;
   vertical-align: top;
   border-color: #dee2e6;
 }
@@ -2191,20 +2191,15 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
+  color: #000000;
+  background-color: #2b4858;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  border: 1px solid #f9fafb;
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-@media (prefers-reduced-motion: reduce) {
-  .form-control, .dataTable-input {
-    transition: none;
-  }
 }
 .form-control[type=file], [type=file].dataTable-input {
   overflow: hidden;
@@ -2235,7 +2230,8 @@ progress {
   opacity: 1;
 }
 .form-control:disabled, .dataTable-input:disabled, .form-control[readonly], [readonly].dataTable-input {
-  background-color: #e9ecef;
+  background-color: #2b4858;
+  color: floralwhite;
   opacity: 1;
 }
 .form-control::-webkit-file-upload-button, .dataTable-input::-webkit-file-upload-button {
@@ -2411,13 +2407,13 @@ textarea.form-control-lg {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
+  color: #f9fafb;
+  background-color: #2b4858;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
   background-size: 16px 12px;
-  border: 1px solid #ced4da;
+  border: 1px solid #bcced5;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -webkit-appearance: none;
@@ -4581,7 +4577,7 @@ textarea.form-control-lg {
 .card-header {
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  background-color: #212529f5;
+  background-color: #2b3238;
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 .card-header:first-child {
@@ -5576,6 +5572,7 @@ textarea.form-control-lg {
   align-items: center;
   justify-content: space-between;
   padding: 1rem 1rem;
+  background-color: #41464b;
   border-bottom: 1px solid #dee2e6;
   border-top-left-radius: calc(0.3rem - 1px);
   border-top-right-radius: calc(0.3rem - 1px);
@@ -5591,9 +5588,11 @@ textarea.form-control-lg {
 }
 
 .modal-body {
-  position: relative;
-  flex: 1 1 auto;
-  padding: 1rem;
+  color: #f9fafb;
+    text-align: var(--bs-body-text-align);
+    background-color: #41464b;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .modal-footer {
@@ -11440,6 +11439,11 @@ body {
   flex-wrap: nowrap;
 }
 .sb-sidenav .sb-sidenav-menu {
+  color: #f9fafb;
+    text-align: var(--bs-body-text-align);
+    background-color: #13171a;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   flex-grow: 1;
 }
 .sb-sidenav .sb-sidenav-menu .nav {
@@ -11480,7 +11484,7 @@ body {
 }
 
 .sb-sidenav-dark {
-    background-color: #white;
+    background-color: #0e181a;
     color: rgba(255, 255, 255, 0.5);
 
 }
@@ -11506,7 +11510,7 @@ body {
   color: #fff;
 }
 .sb-sidenav-dark .sb-sidenav-footer {
-  background-color: #343a40;
+  background-color: #13171a;
 }
 
 .sb-sidenav-light {
@@ -11664,7 +11668,7 @@ body {
   width: 0;
   position: absolute;
   right: 4px;
-  border-left: 4px solid transparent;
+  border-bottom: 4px solid #f0f0f0;
   border-right: 4px solid transparent;
   opacity: 0.2;
 }
