--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -1966,7 +1966,7 @@ progress {
   --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: #ffffff;
   vertical-align: top;
   border-color: #dee2e6;
 }
