--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,7 +84,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: #f9fafb;
   text-align: var(--bs-body-text-align);
-  background-color: #515a62; 
+  background-color: #6c3f1c;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -2191,8 +2191,8 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #000000;
-  background-color: #2b4858;
+  color: #ffffff;
+  background-color: #837c5f;
   background-clip: padding-box;
   border: 1px solid #f9fafb;
   -webkit-appearance: none;
@@ -2230,7 +2230,7 @@ progress {
   opacity: 1;
 }
 .form-control:disabled, .dataTable-input:disabled, .form-control[readonly], [readonly].dataTable-input {
-  background-color: #2b4858;
+  background-color: #837c5f;;
   color: floralwhite;
   opacity: 1;
 }
@@ -2398,7 +2398,6 @@ textarea.form-control-lg {
   height: 1.5em;
   border-radius: 0.25rem;
 }
-
 .form-select, .dataTable-selector {
   display: block;
   width: 100%;
@@ -2408,7 +2407,7 @@ textarea.form-control-lg {
   font-weight: 400;
   line-height: 1.5;
   color: #f9fafb;
-  background-color: #2b4858;
+  background-color: #837c5f;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
@@ -4519,15 +4518,15 @@ textarea.form-control-lg {
 }
 
 .card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #2a251b;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
 }
 .card > hr {
   margin-right: 0;
@@ -4577,7 +4576,7 @@ textarea.form-control-lg {
 .card-header {
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  background-color: #2b3238;
+  background-color: #1c160d;
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 .card-header:first-child {
@@ -5572,7 +5571,7 @@ textarea.form-control-lg {
   align-items: center;
   justify-content: space-between;
   padding: 1rem 1rem;
-  background-color: #41464b;
+  background-color: #42331f;
   border-bottom: 1px solid #dee2e6;
   border-top-left-radius: calc(0.3rem - 1px);
   border-top-right-radius: calc(0.3rem - 1px);
@@ -5589,10 +5588,10 @@ textarea.form-control-lg {
 
 .modal-body {
   color: #f9fafb;
-    text-align: var(--bs-body-text-align);
-    background-color: #41464b;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  text-align: var(--bs-body-text-align);
+  background-color: #62472c;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .modal-footer {
@@ -7820,8 +7819,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+  background-image: url('../../assets/assets/img/11.jpg');
 }
 
 .bg-secondary {
@@ -7850,15 +7848,11 @@ textarea.form-control-lg {
 }
 
 .bg-light {
-  --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+    background-color: #0c0805;
 }
-
 .bg-dark {
-  --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+  background-color: #322920;
 }
-
 .bg-black {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-black-rgb), var(--bs-bg-opacity)) !important;
@@ -11441,7 +11435,7 @@ body {
 .sb-sidenav .sb-sidenav-menu {
   color: #f9fafb;
   text-align: var(--bs-body-text-align);
-  background-color: #252b30;
+  background-color: #1e1812;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   flex-grow: 1;
@@ -11510,9 +11504,8 @@ body {
   color: #fff;
 }
 .sb-sidenav-dark .sb-sidenav-footer {
-  background-color: #13171a;
+  background-color: #1e1812;
 }
-
 .sb-sidenav-light {
   background-color: #f8f9fa;
   color: #212529;
