nambahin buat bikin harga berubah di barang

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7819,7 +7819,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-image: url('../../assets/assets/img/11.jpg');
+  background-image: url('../../assets/assets/img/interior2.jpg');
 }
 
 .bg-secondary {
@@ -7851,7 +7851,7 @@ textarea.form-control-lg {
     background-color: #0c0805;
 }
 .bg-dark {
-  background-image: url('../assets/img/13.jpg');
+  background-image: url('../../assets/assets/img/interior1.jpg');
 }
 .bg-black {
   --bs-bg-opacity: 1;
