melakukan perubahan css dan mencoba melakukan perubahan untuk di pilihan barang di masuk isinyaa barang mentah begitupun keluar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7819,7 +7819,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-image: url('../../assets/assets/img/interior7.jpg');
+  background-image: url('../../assets/assets/img/interior6.png');
 }
 
 .bg-secondary {
@@ -7851,7 +7851,7 @@ textarea.form-control-lg {
     background-color: #0c0805;
 }
 .bg-dark {
-  background-image: url('../../assets/assets/img/interior1.jpg');
+  background-image: url('../../assets/assets/img/interior6.png');
 }
 .bg-black {
   --bs-bg-opacity: 1;
