nambahin laporan laporan , ngubah css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7851,7 +7851,7 @@ textarea.form-control-lg {
     background-color: #0c0805;
 }
 .bg-dark {
-  background-image: url('../../assets/assets/img/interior6.png');
+  background-image: url('../../assets/assets/img/interior7.jpg');
 }
 .bg-black {
   --bs-bg-opacity: 1;
